engine/src/R3E/j3x/tests/good/5.j3x
list[int] a = [5;7;8;10]
