engine/src/R3E/j3x/tests/bad/wrong_type_6.j3x
list[int] a = [1; "a"]